# learn-ncurses

./: .clang-format  CMakeLists.txt  README.md  test.cpp
include/: Border.hpp  Color.hpp  Text.hpp  Window.hpp
src/: Border.cpp  Color.cpp  Window.cpp  main.cpp
